--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Site destinado a variadas notícias do estado da Bahia.">
     <meta name="keywords" content="">
-    <meta name="author" content="Brenndol Magalhães">
+    <meta name="author" content="Brenndol Magalhães, Nairan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -70,8 +70,8 @@
     <div class="container-fluid">
       <a href="{% url 'home' %}">Início</a>
       <a href="{% url 'policia' %}">Polícia</a>
-      <a href="#">Esportes</a>
-      <a href="#">Política</a>
+      <a href="{% url 'esporte' %}">Esportes</a>
+      <a href="{% url 'politica' %}">Política</a>
       <a href="#">Entretenimento</a>
       <a href="#">Contato</a>
      
@@ -82,26 +82,27 @@
     </div>
   </nav>
 
+  <main>
+  
+  </main>
+
   <div class="container text-center">
     <div class="row">
         <div class="col">
-        <h3>PUBLICIDADE</h3>
+      <h2>
+        {% block conteudo %}
+      
+        {% endblock %}</h2>
       </div>
       <div class="col-6">
+        <h2>hhhhhhhhhhhhh</h2>
     </div>
     <div class="col">
-        <h3>PUBLICIDADE</h3>
+      <h2>BBBBBBBBBBB</h2>
+      
       </div>
     </div>
   </div>
-
-  {% block conteudo %}
-
-  {% endblock %}
-    
-    <div class="footer">
-      <p>Site de Notícias © 2024</p>
-    </div>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
