--- a/blog/templates/policia.html
+++ b/blog/templates/policia.html
@@ -2,8 +2,29 @@
 
 
     {% block conteudo %}
+        {% for categoria in categorias %}
+        <div class="card mx-3 mb-3" style="width: 18rem;">
+            {% load static %}
 
-    {% endblock conteudo% }
+            <img src="{% static 'viatura.png' %}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">{{categoria}}</h5> 
+              <p class="card-text">{{cat.categoria}}</p>
+              <a href="#" class="btn btn-primary">Notícia {{ cat.noticias }}</a>
+            </div>
+          </div>  
 
+        
 
-    {% endblock %}
+          {% empty %}
+            <p>Não há registro.</p>
+    
+        {% endfor %}
+
+        
+
+        
+
+    
+    {% endblock conteudo %}
+
