--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="pt">
-  <head>
-
+<head>
     <meta charset="utf-8">
     <meta name="description" content="Site destinado a variadas notícias do estado da Bahia.">
     <meta name="keywords" content="">
     <meta name="author" content="Brenndol Magalhães, Nairan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>{% block titulo %}Seu Título Aqui{% endblock titulo %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <style>
@@ -59,52 +58,33 @@
         
     </style>
   
-  </head>
+</head>
   
-  <body>
+<body>
     
 <div class="header">
-      <h1>Bahia News</h1>
-    </div>
-  <nav class="navbar p-0 navbar-expand-lg bg-body-tertiary">
+    <h1>Bahia News</h1>
+</div>
+<nav class="navbar p-0 navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a href="{% url 'home' %}">Início</a>
-      <a href="{% url 'policia' %}">Polícia</a>
-      <a href="{% url 'esporte' %}">Esportes</a>
-      <a href="{% url 'politica' %}">Política</a>
-      <a href="#">Entretenimento</a>
-      <a href="#">Contato</a>
-     
+        <a href="{% url 'home' %}">Início</a>
+        <a href="{% url 'policia' %}">Polícia</a>
+        <a href="{% url 'esporte' %}">Esportes</a>
+        <a href="{% url 'politica' %}">Política</a>
+        <a href="#">Entretenimento</a>
+        <a href="#">Contato</a>
+        
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
     </div>
-  </nav>
+</nav>
 
-  <main>
-  
-  </main>
+<main>
+    {% block conteudo %}{% endblock conteudo %}
+</main>
 
-  <div class="container text-center">
-    <div class="row">
-        <div class="col">
-      <h2>
-        {% block conteudo %}
-      
-        {% endblock %}</h2>
-      </div>
-      <div class="col-6">
-        <h2>hhhhhhhhhhhhh</h2>
-    </div>
-    <div class="col">
-      <h2>BBBBBBBBBBB</h2>
-      
-      </div>
-    </div>
-  </div>
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
-
