--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,10 +1,57 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block conteudo %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 p-2">
+      
+      {% for noticia in todas_noticias_policia %}
+      {% load static %}
+        <img src="{% static 'viatura.png' %}" class="card-img-top" alt="Imagem de ilustração">
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">{{ noticia.nome }}</h5>
+          <p class="card-text">{{ noticia.corpo |truncatechars:450 }}</p>
+          <a href="" class="btn btn-primary">Ler mais</a>
 
-
-
-
-
+        </div>
+      </div>
+      {% empty %}
+      <p>Não há notícias de Polícia.</p>
+      {% endfor %}
+    </div>
+    <div class="col-md-4 p-2">
+    
+      {% for noticia in todas_noticias_esporte %}
+      {% load static %}
+        <img src="{% static 'campo.png' %}" class="card-img-top" alt="Imagem de ilustração">
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">{{ noticia.nome }}</h5>
+          <p class="card-text">{{ noticia.corpo }}</p>
+          <a href="" class="btn btn-primary">Ler mais</a>
+        </div>
+      </div>
+      {% empty %}
+      <p>Não há notícias de Esporte.</p>
+      {% endfor %}
+    </div>
+    <div class="col-md-4 p-2">
+      
+      {% for noticia in todas_noticias_politica %}
+      {% load static %}
+        <img src="{% static 'image.png' %}" class="card-img-top" alt="Imagem de ilustração">
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">{{ noticia.nome }}</h5>
+          <p class="card-text">{{ noticia.corpo }}</p>
+          <a href="" class="btn btn-primary">Ler mais</a>
+        </div>
+      </div>
+      {% empty %}
+      <p>Não há notícias de Política.</p>
+      {% endfor %}
+    </div>
+  </div>
+</div>
 {% endblock conteudo %}
-  
