--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -36,11 +36,11 @@
       <p>Não há notícias de Esporte.</p>
       {% endfor %}
     </div>
-    <div class="col-md-4 p-2">
       
       {% for noticia in todas_noticias_politica %}
       {% load static %}
-        <img src="{% static 'image.png' %}" class="card-img-top" alt="Imagem de ilustração">
+      <div class="col-md-4 p-2">
+        <img src="{% static 'politica\image.png' %}" class="card-img-top" alt="Imagem de ilustração">
       <div class="card mb-3">
         <div class="card-body">
           <h5 class="card-title">{{ noticia.nome }}</h5>
@@ -48,10 +48,11 @@
           <a href="" class="btn btn-primary">Ler mais</a>
         </div>
       </div>
+    </div>
+
       {% empty %}
       <p>Não há notícias de Política.</p>
       {% endfor %}
-    </div>
   </div>
 </div>
 {% endblock conteudo %}
