--- a/blog/templates/politica.html
+++ b/blog/templates/politica.html
@@ -7,7 +7,7 @@
     <div class="col-md-4 p-2">
       <div class="card mb-3">
         {% load static %}
-        <img src="{% static 'politica\image.png' %}" class="card-img-top" alt="Imagem de ilustração">
+        <img src="{% static noticia.imagem %}" class="card-img-top" alt="Imagem de ilustração">
         <div class="card-body">
           <h5 class="card-title">{{ noticia.nome }}</h5>
           <p class="card-text">{{ noticia.corpo }}</p>
