--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -65,13 +65,13 @@
 <div class="header">
     <h1>Bahia News</h1>
 </div>
-<nav class="navbar p-0 navbar-expand-lg bg-body-tertiary">
+<nav class="navbar p-0 navbar-expand-md bg-body-tertiary">
     <div class="container-fluid">
         <a href="{% url 'home' %}">Início</a>
         <a href="{% url 'policia' %}">Polícia</a>
         <a href="{% url 'esporte' %}">Esportes</a>
         <a href="{% url 'politica' %}">Política</a>
-        <a href="#">Entretenimento</a>
+        <a href="#">Destaques</a>
         <a href="#">Contato</a>
         
         <form class="d-flex" role="search">
