--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="Brenndol Magalhães, Nairan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block titulo %}Seu Título Aqui{% endblock titulo %}</title>
+    <title>{% block titulo %}Bahia News{% endblock titulo %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <style>
@@ -71,8 +71,8 @@
         <a href="{% url 'policia' %}">Polícia</a>
         <a href="{% url 'esporte' %}">Esportes</a>
         <a href="{% url 'politica' %}">Política</a>
-        <a href="#">Destaques</a>
-        <a href="#">Contato</a>
+        <a href="{% url 'destaques' %}">Destaques</a>
+        <a href="{% url 'contato' %}">Contato</a>
         
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
