--- a/blog/templates/form.html
+++ b/blog/templates/form.html
@@ -1,12 +1,35 @@
 {% extends 'base.html' %}
 
 {% block conteudo %} 
-
-<form action="{% url 'form' %}" method="post">
-    {% csrf_token %}
-    {{form}}
-    <button>Adicionar Notícia</button>
-</form>
-
-
-{% block conteudo %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h2>Entre em Contato</h2>
+            <form action="{% url 'contato' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    {{ form.nome.label_tag }}
+                    {{ form.nome }}
+                </div>
+                <div class="form-group">
+                    {{ form.telefone.label_tag }}
+                    {{ form.telefone }}
+                </div>
+                <div class="form-group">
+                    {{ form.email.label_tag }}
+                    {{ form.email }}
+                </div>
+                <div class="form-group">
+                    {{ form.assunto.label_tag }}
+                    {{ form.assunto }}
+                </div>
+                <div class="form-group">
+                    {{ form.mensagem.label_tag }}
+                    {{ form.mensagem }}
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
+    </div>
+</div>
+{% endblock %}
