--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="pt">
+
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Site destinado a variadas notícias do estado da Bahia.">
@@ -7,41 +8,48 @@
     <meta name="author" content="Brenndol Magalhães, Nairan">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block titulo %}Bahia News{% endblock titulo %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <style>
-       body {
+        body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
         }
-       .header {
+
+        .header {
             background-color: #1a44de;
             color: #fff;
             padding: 25px 0;
             text-align: center;
         }
+
         h1 {
-          font-family: "DynaPuff", system-ui;
+            font-family: "DynaPuff", system-ui;
 
         }
+
         .row {
-          background-color: #fff;
-          color: black;
+            background-color: #fff;
+            color: black;
         }
-        .container-fluid  {
+
+        .container-fluid {
             background-color: #2e73e0;
             color: white;
             padding: 0 15px;
             text-align: center;
         }
+
         .container-fluid a {
             color: white;
             text-decoration: none;
             padding: 10px 0;
         }
-        .col{
+
+        .col {
             background-color: #fbf5f5;
             color: rgb(11, 10, 10);
             padding: 0 15px;
@@ -49,42 +57,61 @@
             border-color: #333;
 
         }
+
         .content {
-          margin: 15px;
-          padding: 20px;
-          background-color: white;
+            margin: 15px;
+            padding: 20px;
+            background-color: white;
         }
-    
-        
     </style>
-  
+
 </head>
-  
+
 <body>
-    
-<div class="header">
-    <h1>Bahia News</h1>
-</div>
-<nav class="navbar p-0 navbar-expand-md bg-body-tertiary">
-    <div class="container-fluid">
-        <a href="{% url 'home' %}">Início</a>
-        <a href="{% url 'policia' %}">Polícia</a>
-        <a href="{% url 'esporte' %}">Esportes</a>
-        <a href="{% url 'politica' %}">Política</a>
-        <a href="{% url 'destaques' %}">Destaques</a>
-        <a href="{% url 'contato' %}">Contato</a>
-        
-        <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
+
+    <div class="header">
+        <h1>Bahia News</h1>
     </div>
-</nav>
 
-<main>
-    {% block conteudo %}{% endblock conteudo %}
-</main>
+    <nav class="navbar p-0 navbar-expand-md bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'home' %}">Início</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'policia' %}">Polícia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'esporte' %}">Esportes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'politica' %}">Política</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'destaques' %}">Destaques</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contato' %}">Contato</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Pesquise aqui" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <main>
+        {% block conteudo %}{% endblock conteudo %}
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
