--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,12 +1,13 @@
+User
 <!doctype html>
 <html lang="pt">
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Site destinado a variadas notícias do estado da Bahia.">
     <meta name="keywords" content="">
-    <meta name="author" content="Brenndol Magalhães, Nairan">
+    <meta name="author" content="Brenndol Magalhães, Nairan, Ricardo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block titulo %}Seu Título Aqui{% endblock titulo %}</title>
+    <title>{% block titulo %}Bahia News{% endblock titulo %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <style>
@@ -65,14 +66,14 @@
 <div class="header">
     <h1>Bahia News</h1>
 </div>
-<nav class="navbar p-0 navbar-expand-lg bg-body-tertiary">
+<nav class="navbar p-0 navbar-expand-md bg-body-tertiary">
     <div class="container-fluid">
         <a href="{% url 'home' %}">Início</a>
         <a href="{% url 'policia' %}">Polícia</a>
         <a href="{% url 'esporte' %}">Esportes</a>
         <a href="{% url 'politica' %}">Política</a>
-        <a href="#">Entretenimento</a>
-        <a href="#">Contato</a>
+        <a href="{% url 'destaques' %}">Destaques</a>
+        <a href="{% url 'contato' %}">Contato</a>
         
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
