--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Site destinado a variadas notícias do estado da Bahia.">
     <meta name="keywords" content="">
-    <meta name="author" content="Brenndol Magalhães, Nairan">
+    <meta name="author" content="Brenndol Magalhães, Nairan, Ricardo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block titulo %}Bahia News{% endblock titulo %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
