--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -5,27 +5,27 @@
   <div class="row">
     {% for noticia in todas_noticias %}
     <div class="col-md-4 p-2">
-      <div class="card h-100">
-      {% for imagem in noticia.imagem_set.all %}
-      {% load static %}
+      <div class="h-100">
+        {% for imagem in noticia.imagem_set.all %}
+        {% load static %}
         <img src="{% static imagem.nome %}" class="card-img-top img-fluid" alt="Imagem de ilustração">
-      {% endfor %}
-      <div class="card mb-3">
-        <div class="card-body">
-          <h5 class="card-title">{{ noticia.nome }}</h5>
-          <div class="card-text" style="max-height: 200px; overflow-y: auto;">
-          {% for corpo in noticia.corpo_set.all %}
+        {% endfor %}
+        <div class="card mb-3" style="max-height:100%;">
+          <div class="card-body">
+            <h5 class="card-title">{{ noticia.nome }}</h5>
+            <div class="card-text" style="max-height: 200px; overflow-y: auto;">
+              {% for corpo in noticia.corpo_set.all %}
               <p>{{ corpo.corpo }}</p>
-          {% endfor %}  
+              {% endfor %}
+            </div>
+            <a href="{% url 'detalhes_noticia' noticia.id %}" class="btn btn-primary">Ler mais</a>
           </div>
-          <a href="{% url 'detalhes_noticia' noticia.id %}" class="btn btn-primary">Ler mais</a>
         </div>
       </div>
-      </div>
     </div>
-  {% empty %}
+    {% empty %}
     <p>Não há notícias.</p>
-  {% endfor %}
+    {% endfor %}
   </div>
 </div>
 {% endblock conteudo %}
