--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,34 +1,30 @@
-<!doctype html>
-<html lang="pt">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site destinado a variadas notícias do estado da Bahia.">
-    <meta name="keywords" content="">
     <meta name="author" content="Brenndol Magalhães, Nairan">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block titulo %}Bahia News{% endblock titulo %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <style>
-       body {
+        body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
         }
-       .header {
-            background-color: #1a44de;
-            color: #fff;
-            padding: 25px 0;
-            text-align: center;
+  
+        main {
+            background-color: white;
         }
         h1 {
-          font-family: "DynaPuff", system-ui;
-
+            font-family: "DynaPuff", system-ui;
         }
         .row {
-          background-color: #fff;
-          color: black;
+            background-color: #fff;
+            color: black;
         }
         .container-fluid  {
             background-color: #2e73e0;
@@ -41,49 +37,181 @@
             text-decoration: none;
             padding: 10px 0;
         }
-        .col{
+        .col {
             background-color: #fbf5f5;
             color: rgb(11, 10, 10);
             padding: 0 15px;
             text-align: center;
             border-color: #333;
-
         }
         .content {
-          margin: 15px;
-          padding: 20px;
-          background-color: white;
+            margin: 15px;
+            padding: 20px;
+            background-color: white;
         }
-    
-        
+        footer {
+            background-color: #2e73e0;
+            height: 100px;
+            color: white;
+            text-transform: uppercase;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        /* ajuste no estilo do modal */
+        .modal-content {
+            background-color: #fff;
+            border-radius: 10px;
+        }
     </style>
-  
 </head>
   
-<body>
+<body class="container-fluid p-0">
+    {% load static %}
+    {% block header %} 
+    <div class="header" style="position: relative; height: 200px; overflow: hidden;">
+        <img src="{% static 'header/imageheader.png' %}" alt="Header Image" style="width: 100%; height: 100%; object-fit: cover;">
+    </div>
+    {% endblock header %}
     
-<div class="header">
-    <h1>Bahia News</h1>
-</div>
-<nav class="navbar p-0 navbar-expand-md bg-body-tertiary">
-    <div class="container-fluid">
-        <a href="{% url 'home' %}">Início</a>
-        <a href="{% url 'policia' %}">Polícia</a>
-        <a href="{% url 'esporte' %}">Esportes</a>
-        <a href="{% url 'politica' %}">Política</a>
-        <a href="{% url 'destaques' %}">Destaques</a>
-        <a href="{% url 'contato' %}">Contato</a>
-        
-        <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
+
+
+
+<nav class="navbar p-0 align-items-stretch navbar-expand-lg bg-primary" style="max-height: 55px;">
+    <div class="container-fluid p-0 m-0 row align-items-start bg-primary" style="max-height: 55px;">
+        <button class="navbar-toggler col-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navegacao" aria-controls="navegacao" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse col-auto row bg-primary align-self-stretch" id="navegacao">
+            <ul class="navbar-nav col align-items-start p-1 m-0 px-3 bg-primary">
+                <li class="nav-item">
+                    <a class="nav-link px-2 py-1" href="{% url 'home' %}">Início</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2 py-1" href="{% url 'policia' %}">Polícia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2 py-1" href="{% url 'esporte' %}">Esportes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2 py-1" href="{% url 'politica' %}">Política</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2 py-1" href="{% url 'destaques' %}">Destaques</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2 py-1" href="{% url 'contato' %}">Contato</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link px-2 py-1" href="{% url 'cadastronoticia' %}">Cadastrar Notícia</a>
+                </li>
+            </ul>    
+            <!-- Botões de login/cadastro -->
+            {% if user.is_authenticated %}
+            <div class="dropdown col-auto me-3 m-1">
+                <button class="btn btn-secondary bg-primary h-100 px-3 py-2 dropdown-toggle rounded-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                        <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
+                    </svg>
+                    {{ user.username }}
+                </button>
+                <ul class="dropdown-menu border-0 bg-primary p-0">
+                    <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-perfil" class="rounded-0 d-block bg-primary btn btn-secondary"> Perfil </a></li>
+                    <li><a href="{% url 'logout' %}" class="rounded-0 bg-primary d-block btn btn-secondary"> Logout </a> </li>
+                </ul>
+            </div>
+            {% else %}
+            <!-- Botões de login e cadastro abrem modais -->
+            <button class="btn col-auto px-3 py-1 my-3 me-3 text-light" data-bs-toggle="modal" data-bs-target="#modal-login"> Login </button>
+            <button class="btn col-auto px-1 py-1 my-3 me-3 text-light" data-bs-toggle="modal" data-bs-target="#modal-cadastro"> Cadastre-se </Cadastre-se> </button>
+            {% endif %}
+        </div>
     </div>
 </nav>
 
-<main>
-    {% block conteudo %}{% endblock conteudo %}
-</main>
+<main>{% block conteudo %}{%endblock conteudo%} </main>
+    <!-- Modals -->
+    <section id="modal-login" class="modal top-0 row align-content-center">
+        <div class="modal-dialog col-10 col-lg-6 mx-auto bg-light rounded">
+            <div class="modal-content p-4">
+                <h2 class="text-center text-dark my-4"> Login </h2>
+                <form method="post" action="{% url 'login' %}" class="row flex-column align-items-end">
+                    {% csrf_token %}
+                    {{loginform.username}}
+                    {{loginform.password}}                        
+                    <div class="col-auto">
+                        <a type="button" class="btn my-3 btn-secondary px-3 py-2" data-bs-dismiss="modal"> Cancelar </a>
+                        <button type="submit" class="btn my-3 btn-success px-3 py-2"> Login </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    
+    <section id="modal-cadastro" class="modal top-0 row align-content-center">
+        <div class="modal-dialog col-10 col-lg-6 mx-auto bg-light rounded">
+            <div class="modal-content p-4">
+                <h2 class="text-center text-dark my-4"> Cadastro </h2>
+                <form method="post" action="{% url 'cadastro' %}" class="row flex-column align-items-end">
+                    {% csrf_token %}
+                    <div class="text-danger">
+                        {{usuarioform.errors.first_name}}
+                        {{usuarioform.errors.last_name}}
+                        {{usuarioform.errors.email}}
+                        {{usuarioform.errors.username}}
+                        {{usuarioform.errors.password}}
+                    </div>
+                    <div class="d-flex gap-2">
+                        {{usuarioform.first_name}}
+                        {{usuarioform.last_name}}
+                    </div>
+                    {{usuarioform.email}}
+                    {{usuarioform.username}}
+                    {{usuarioform.password}}
+                    <input name="confirmacao" type="password" placeholder="Confirme a Senha" class="form-control my-2 p-2">
+                    <div class="col-auto">
+                        <a type="button" class="btn my-3 btn-secondary px-3 py-2" data-bs-dismiss="modal"> Cancelar </a>
+                        <button type="submit" class="btn my-3 btn-success px-3 py-2"> Cadastro </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- Se o usuário estiver autenticado, exibe o modal de perfil -->
+    {% if user.is_authenticated %}
+    <section id="modal-perfil" class="modal top-0 row align-content-center">
+        <div class="modal-dialog col-10 col-lg-6 mx-auto bg-light rounded">
+            <div class="modal-content p-4">
+                <h2 class="text-center text-dark my-4"> Perfil </h2>
+                <form method="post" action="{% url 'editar_perfil' %}" class="row flex-column align-items-end">
+                    {% csrf_token %}
+                    <p>Usuário:</p>
+                    <input type="text" readonly class="form-control-plaintext my-2" value="{{user.username}}">
+
+                    <p>Nome:</p>
+                    <div class="d-flex gap-2">
+                        {{usuarioform.first_name}}
+                        {{usuarioform.last_name}}
+                    </div>
+                    <p>Email:</p>
+                    {{usuarioform.email}}
+                    <div class="col-auto">
+                        <a href="{% url 'delusuario' user %}" type="button" class="my-3 text-danger px-3 py-2 link text-decoration-none"> Encerrar Conta </a>
+                        <a type="button" class="btn my-3 btn-secondary px-3 py-2" data-bs-dismiss="modal"> Cancelar </a>
+                        <button type="submit" class="btn my-3 btn-success px-3 py-2"> Atualizar </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>        
+    {% endif %}
+
+
+<footer>
+    <div class="footer"><h6>© Bahia News. 2024</h6></div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
